feat: adicionar CRUD de categorias e corrigir tipagens
