# apps/api/src/category/dto/create-category.dto.ts
@@ -1,0 +1,16 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty, IsString, MaxLength, MinLength } from 'class-validator';
+
+export class CreateCategoryDto {
+  @ApiProperty({
+    description: 'The title of the category',
+    example: 'Work',
+    minLength: 3,
+    maxLength: 50,
+  })
+  @IsString()
+  @IsNotEmpty()
+  @MinLength(3)
+  @MaxLength(50)
+  title!: string;
+}
